@@ -12,9 +12,10 @@
  *******************************************************************************/
 package org.eclipse.sirius.components.collaborative.forms.api;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Objects;
-import java.util.UUID;
 
 import org.eclipse.sirius.components.collaborative.api.IRepresentationConfiguration;
 
@@ -25,7 +26,7 @@ import org.eclipse.sirius.components.collaborative.api.IRepresentationConfigurat
  */
 public class RepresentationsConfiguration implements IRepresentationConfiguration {
 
-    private static final String REPRESENTATIONS_PREFIX = "representations:";
+    private static final String REPRESENTATIONS_PREFIX = "representations://";
 
     private final String formId;
 
@@ -33,7 +34,8 @@ public class RepresentationsConfiguration implements IRepresentationConfiguratio
 
     public RepresentationsConfiguration(List<String> objectIds) {
         this.objectIds = Objects.requireNonNull(objectIds);
-        this.formId = UUID.nameUUIDFromBytes((REPRESENTATIONS_PREFIX + objectIds).getBytes()).toString();
+        var encodedIds = objectIds.stream().map(id -> URLEncoder.encode(id, StandardCharsets.UTF_8)).toList();
+        this.formId = REPRESENTATIONS_PREFIX + "?objectIds=[" + String.join(",", encodedIds) + "]";
     }
 
     @Override
