@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2023 Obeo.
+ * Copyright (c) 2021, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -21,5 +21,5 @@ import org.eclipse.sirius.components.collaborative.forms.api.IFormInput;
  *
  * @author gcoutable
  */
-public record DeleteListItemInput(UUID id, String representationId, String editingContextId, String listId, String listItemId) implements IFormInput {
+public record DeleteListItemInput(UUID id, String editingContextId, String representationId, String listId, String listItemId) implements IFormInput {
 }
