@@ -1,73 +1,0 @@
-/*******************************************************************************
- * Copyright (c) 2021, 2023 Obeo.
- * This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v2.0
- * which accompanies this distribution, and is available at
- * https://www.eclipse.org/legal/epl-2.0/
- *
- * SPDX-License-Identifier: EPL-2.0
- *
- * Contributors:
- *     Obeo - initial API and implementation
- *******************************************************************************/
-package org.eclipse.sirius.web.graphql.datafetchers.mutation;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import java.util.Objects;
-import java.util.concurrent.CompletableFuture;
-
-import org.eclipse.sirius.components.annotations.spring.graphql.MutationDataFetcher;
-import org.eclipse.sirius.components.collaborative.api.IEditingContextEventProcessorRegistry;
-import org.eclipse.sirius.components.collaborative.forms.dto.DeleteListItemInput;
-import org.eclipse.sirius.components.core.api.ErrorPayload;
-import org.eclipse.sirius.components.core.api.IPayload;
-import org.eclipse.sirius.components.graphql.api.IDataFetcherWithFieldCoordinates;
-import org.eclipse.sirius.web.graphql.messages.IGraphQLMessageService;
-
-import graphql.schema.DataFetchingEnvironment;
-
-/**
- * The data fetcher used to delete a list item.
- * <p>
- * It will be used to handle the following GraphQL field:
- * </p>
- *
- * <pre>
- * type Mutation {
- *   deleteListItem(input: DeleteListItemInput!): DeleteListItemPayload!
- * }
- * </pre>
- *
- * @author gcoutable
- */
-@MutationDataFetcher(type = "Mutation", field = MutationDeleteListItemDataFetcher.DELETE_LIST_ITEM)
-public class MutationDeleteListItemDataFetcher implements IDataFetcherWithFieldCoordinates<CompletableFuture<IPayload>> {
-
-    public static final String DELETE_LIST_ITEM = "deleteListItem";
-
-    private static final String INPUT_ARGUMENT = "input";
-
-    private final ObjectMapper objectMapper;
-
-    private IEditingContextEventProcessorRegistry editingContextEventProcessorRegistry;
-
-    private IGraphQLMessageService messageService;
-
-    public MutationDeleteListItemDataFetcher(ObjectMapper objectMapper, IEditingContextEventProcessorRegistry editingContextEventProcessorRegistry, IGraphQLMessageService messageService) {
-        this.objectMapper = Objects.requireNonNull(objectMapper);
-        this.editingContextEventProcessorRegistry = Objects.requireNonNull(editingContextEventProcessorRegistry);
-        this.messageService = Objects.requireNonNull(messageService);
-    }
-
-    @Override
-    public CompletableFuture<IPayload> get(DataFetchingEnvironment environment) throws Exception {
-        Object argument = environment.getArgument(INPUT_ARGUMENT);
-        var input = this.objectMapper.convertValue(argument, DeleteListItemInput.class);
-
-        // @formatter:off
-        return this.editingContextEventProcessorRegistry.dispatchEvent(input.editingContextId(), input)
-                .defaultIfEmpty(new ErrorPayload(input.id(), this.messageService.unexpectedError())).toFuture();
-        // @formatter:on
-    }
-
-}
