@@ -71,6 +71,7 @@ More existing APIs will be migrated to this new common pattern.
 - https://github.com/eclipse-sirius/sirius-web/issues/3664[#3664] [core] The Default.svg image is no longer displayed with the new architecture.
 - https://github.com/eclipse-sirius/sirius-web/issues/3693[#3693] [view] Fix the computation of the candidates for the ReferenceWidget.
 - https://github.com/eclipse-sirius/sirius-web/issues/3716[#3716] [forms] Fix an issue causing some icons of the reference widget to be missing
+- https://github.com/eclipse-sirius/sirius-web/issues/3672[#3672] [forms] Fix an issue preventing the deletion of a list item
 
 === New Features
 
